<resources>
    <string name="app_name">PersonasBasedeDatos</string>
    <string name="registrar">REGISTRAR</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="genero">Genero</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="pasatiempos">Pastiempos</string>
    <string name="programar">Programar</string>
    <string name="leer">Leer</string>
    <string name="bailar">Bailar</string>
    <string name="guardar">GUARDAR</string>
    <string name="modificar">MODIFICAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="borrar">BORRAR</string>
    <string name="buscar">BUSCAR</string>
    <string name="numero">No.</string>
    <string name="sexo">Sexo</string>
    <string name="listado_Tabla">Listado Tabla</string>
    <string name="listado">Listado</string>
    <string name="error1">Digite la cedula</string>
    <string name="error2">Digite el nombre</string>
    <string name="error3">Digite el apellido</string>
    <string name="mensaje1">Seleccione por lo menos un pasatiempo</string>
    <string name="mensaje2">Persona guardada exitosamente!</string>
    <string name="mensaje3">Persona eliminada exitosamente!</string>
    <string name="confirmacion">Confirmacion</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mensaje4">¿Esta seguro(a) que desea eliminar esta persona?</string>
    <string name="mensaje5">Persona modificada exitosamente!</string>
    <string-array name="opciones">
        <item>@string/registrar</item>
        <item>@string/listado_Tabla</item>
        <item>@string/listado</item>
    </string-array>
</resources>
