<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cuc.personasbasededatos.Registrar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtCedula"
                    android:layout_weight="1"
                    android:hint="@string/cedula"
                    android:layout_marginTop="10dp" />

                <Button
                    android:text="Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:layout_weight="1"
                    tools:text="@string/buscar"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtNombre"
                android:hint="@string/nombre"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtApellido"
                android:hint="@string/apellido"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                tools:text="@string/genero"
                android:layout_marginTop="10dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:text="RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r1"
                    android:layout_weight="1"
                    android:checked="true"
                    tools:text="@string/masculino" />

                <RadioButton
                    android:text="RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r2"
                    android:layout_weight="1"
                    tools:text="@string/femenino" />
            </RadioGroup>

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                tools:text="@string/pasatiempos"
                android:layout_marginTop="10dp" />

            <CheckBox
                android:text="CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chkProgramar"
                android:textSize="14sp"
                android:checked="true"
                tools:text="@string/programar" />

            <CheckBox
                android:text="CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chkLeer"
                tools:text="@string/leer" />

            <CheckBox
                android:text="CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chkBailar"
                tools:text="@string/bailar" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <Button
                    android:text="Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button5"
                    android:layout_weight="1"
                    tools:text="@string/guardar" />

                <Button
                    android:text="Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button4"
                    android:layout_weight="1"
                    tools:text="@string/modificar" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3"
                    android:layout_weight="1"
                    tools:text="@string/eliminar" />

                <Button
                    android:text="Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    android:layout_weight="1"
                    tools:text="@string/borrar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
