<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_listado__tabla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cuc.personasbasededatos.Listado_Tabla">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/tblPersonas5">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="*"
                    android:id="@+id/tblPersonas">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:text="@string/numero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView8"
                            android:textStyle="normal|bold"
                            android:textSize="18sp"
                            android:layout_marginLeft="15dp" />

                        <TextView
                            android:text="@string/cedula"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView7"
                            android:textSize="18sp"
                            android:textStyle="normal|bold"
                            android:layout_marginLeft="15dp" />

                        <TextView
                            android:text="@string/nombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView6"
                            android:textSize="18sp"
                            android:textStyle="normal|bold"
                            android:layout_marginLeft="15dp" />

                        <TextView
                            android:text="@string/sexo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView5"
                            android:textSize="18sp"
                            android:textStyle="normal|bold"
                            android:layout_marginLeft="15dp" />

                        <TextView
                            android:text="@string/pasatiempos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView4"
                            android:textSize="18sp"
                            android:textStyle="normal|bold"
                            android:layout_marginLeft="15dp" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

</RelativeLayout>
